k8s/local_infrastructure/elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: infrastructure
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      volumes:
      - name: elasticsearchdata
        persistentVolumeClaim:
          claimName: elasticsearch
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
        name: elasticsearch
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: elasticsearchdata
          mountPath: /usr/share/elasticsearch/data
