k8s/local_infrastructure/smtp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: smtp
  namespace: infrastructure
  labels:
    app: smtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp
  template:
    metadata:
      labels:
        app: smtp
    spec:
      containers:
      - image: mailhog/mailhog
        name: smtp
        ports:
        - containerPort: 1025
        - containerPort: 8025
