k8s/local_infrastructure/sqlserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sqlserver
  namespace: infrastructure
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: sqlserver
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: SA_PASSWORD
          valueFrom:
            secretKeyRef:
              name: db-user-pass
              key: db_password
        image: mcr.microsoft.com/mssql/server:2017-latest
        name: sqlserver
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql/data
