k8s/local_infrastructure/azurestorage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azurestorage
  namespace: infrastructure
spec:
  selector:
    app: azurestorage
  ports:
  - protocol: TCP
    port: 10000
    targetPort: 10000
