k8s/local_infrastructure/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: infrastructure
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    name: "ui"
    port: 15672
    targetPort: 15672
  - name: "amqp"
    port: 5672
    targetPort: 5672
