k8s/local_infrastructure/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: infrastructure
spec:
  selector:
    app: sqlserver
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
