k8s/local_infrastructure/azurestorage-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: azurestorage
  namespace: infrastructure
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: azurestorage.infrastructure
    http:
      paths:
      - path: /
        backend:
          serviceName: azurestorage
          servicePort: 80
